# openGLRenderer

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
source/: CMakeLists.txt  GraphicsRenderer.cpp  GraphicsRenderer.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShapeDrawer.cpp  ShapeDrawer.h  Window.cpp  Window.h
source/shaders/: ellipse.frag  ellipse.vert  shape.frag  shape.vert
tests/: CMakeLists.txt
tests/helloWorld/: CMakeLists.txt  main.cpp
